sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:3: error: identifier expected but integer literal found.
  var v:Int==0
             ^